--- a/package.json
+++ b/package.json
@@ -1,23 +1,53 @@
 {
-  "name": "json-canon-project",
-  "scripts": {
-    "test": "npm run test --workspaces --if-present",
-    "bench": "npm run bench --workspaces --if-present",
-    "lint": "prettier --check \"./js/*/(src|test|bench)/**/*.js\"",
-    "format": "prettier --write \"./js/*/(src|test|bench)/**/*.js\"",
-    "format-staged": "pretty-quick --staged -pattern \"./js/*/(src|test|bench)/**/*.js\"",
-    "clean:generate": "rm test-data/generated/*",
-    "generate": "npm run generate:numbers && npm run generate:json",
-    "generate:numbers": "json-canon-fuzz numbers 1000000 test-data/generated/numbers.txt",
-    "generate:json": "json-canon-fuzz json 100000 test-data/generated/json.txt"
-  },
-  "workspaces": [
-    "./js/*"
+  "name": "@substrate-system/json-canon",
+  "type": "module",
+  "version": "0.0.0",
+  "main": "dist/index.js",
+  "files": [
+    "./dist/*"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    },
+    "./*": {
+      "import": "./dist/*.js",
+      "require": "./dist/*.cjs"
+    }
+  },
+  "scripts": {
+    "lint": "eslint \"./**/*.{ts,js}\"",
+    "test": "npm run build && esbuild ./test/index.ts --bundle --platform=node --format=esm | node --input-type=module",
+    "build-cjs": "esbuild src/*.ts --format=cjs --keep-names --tsconfig=tsconfig.build.json --outdir=./dist --out-extension:.js=.cjs --sourcemap",
+    "build-cjs:min": "esbuild src/*.ts --format=cjs --minify --keep-names --tsconfig=tsconfig.build.json --outdir=./dist --out-extension:.js=.min.cjs --sourcemap",
+    "build-esm": "esbuild src/*.ts --format=esm --metafile=dist/meta.json --keep-names --tsconfig=tsconfig.build.json --outdir=./dist --sourcemap && tsc --emitDeclarationOnly --project tsconfig.build.json --outDir dist",
+    "build-esm:min": "esbuild ./src/*.ts --format=esm --keep-names --bundle --tsconfig=tsconfig.build.json --minify --out-extension:.js=.min.js --outdir=./dist --sourcemap",
+    "build-example": "mkdir -p ./public && rm -rf ./public/* && VITE_DEBUG_MODE=staging vite --mode staging --base=\"/json-canon\" build",
+    "build-docs": "typedoc ./src/index.ts",
+    "build": "mkdir -p ./dist && rm -rf ./dist/* && npm run build-cjs && npm run build-esm && npm run build-esm:min && npm run build-cjs:min",
+    "toc": "markdown-toc --maxdepth 3 -i README.md",
+    "preversion": "npm run lint",
+    "version": "npm run toc && auto-changelog -p --template keepachangelog --breaking-pattern 'BREAKING CHANGE:' && git add CHANGELOG.md README.md",
+    "postversion": "git push --follow-tags && npm publish",
+    "prepublishOnly": "npm run build"
+  },
   "devDependencies": {
-    "ava": "^5.2.0",
-    "husky": "^8.0.3",
-    "pretty": "^2.0.0",
-    "pretty-quick": "^3.1.3"
-  }
+    "@substrate-system/debug": "^0.9.24",
+    "@substrate-system/tapzero": "^0.10.16",
+    "@types/node": "^24.10.1",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "auto-changelog": "^2.4.0",
+    "esbuild": "^0.27.0",
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "markdown-toc": "^1.2.0",
+    "tap-spec": "^5.0.0",
+    "typedoc": "^0.28.9",
+    "typescript": "^5.9.2",
+    "vite": "^7.0.6"
+  },
+  "author": "nichoth <nichoth@nichoth.com> (https://nichoth.com)",
+  "license": "SEE LICENSE IN LICENSE"
 }
